4.48: 9/XX/2013
	* CORE: Added support for tracking direct database connection activity with DatabaseConnectionProxy.

4.47: 9/8/2013
	* CORE: Added support to the QueryBuilder to support joinOr(...) and innerJoinOr().  Default is AND.
	* CORE: Added support to Dao for another type of queryRaw(...) method that maps results from Object[].
	* CORE: Renamed QueryBuilder and Where clear() to be reset() and deprecated the clear() methods.
	* CORE: Fixed problem where defaultValue = "" was being ignored.  Thanks to ManosProm.  Bug #152.
	* CORE: Fixed ForeignCollection.addAll() which was not doing the same thing as add().  Thanks to Igromanru.  Bug #153.

4.46: 7/29/2013
	* CORE: Added support for raw selects in inner queries.  More powerful and flexible.
	* CORE: Added support for @DatabaseField(readOnly = true) for query only fields.  Thanks to Casey.
	* CORE: Added support for using java.sql.Timestamp fields with @DatabaseField(version = true).
	* CORE: Added support for QueryBuilder.prepareStatementInfo() to return statement and args.  Thanks to SO user.
	* CORE: Fixed problems with SQLExceptions thrown during transaction rollbacks. Thanks to Miroslav Nadhajský. Bug #148.
	* CORE: Fixed a stupid bug in the handling of ColumnArgs and Strings (plus others).  Thanks to jon.  Bug #147.
	* CORE: Fixed eager-collection clear() which was broken.  Thanks to igromanru.  Bug #149.
	* CORE: Fixed eager-collection iterator.remove() which removed every other.  Thanks to igromanru.  Bug #150.
	* CORE: Added support for the javax.persistance @Basic annotation.  Thanks to Roland Oldenburg.  Bug #151.
	* JDBC: Made some portions of JdbcPooledConnectionSource protected for subclasses.  Thanks to Miroslav Nadhajsky.
	* ANDROID: Fixed possible problem with not closing Cursor in queryForFirst().  Thanks to Guillermo Campelo.  Bug #143.

4.45: 3/18/2013
	* CORE: Fixed bad bug introduced in 4.43 that broke date-string backwards compatibility.  Thanks to Howard Liberty. 